chore: checkpoint current frontend backend code